# imap_sorting_hat

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  compute.yaml  ish.py  pyproject.toml  requirements.txt
config/: accounts.yaml.example
docs/: cloud.md  context.md  deploy.md  import-runbook.md
src/fish/: __init__.py  __main__.py  accounts.py  actions.py  backfill.py  bulk.py  classifier.py  cli.py  config.py  connect.py  context.py  corpus.py  corpus_cli.py  embed.py  folders.py  http_server.py  imap_client.py  mcp_server.py  memory.py  parse.py  personal_auth.py  rank.py  search.py  secrets.py  smtp_client.py  status.py  store.py  sync.py  sync_mail.py  tools_registry.py  topics.py  write_lock.py
src/fish/import_sources/: __init__.py  android_sms.py  chatgpt.py  claude.py  runner.py
src/fish/prism/: __init__.py  collect.py  inference.py  model.py  queries.py  query_synthesis.py  relevance.py  train.py
